<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="oil"
            type="com.projectseoul.stockmarkettest.models.CrudeOil" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="@dimen/all_300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_corner"
        android:padding="@dimen/all_16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{oil.date}"
            app:layout_constraintEnd_toStartOf="@+id/unit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2020.09.24" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/unit"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/all_16dp"
            android:text="@string/all_unit_dollar_per_barrel"
            app:layout_constraintBottom_toBottomOf="@+id/date"
            app:layout_constraintStart_toEndOf="@+id/date" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/type"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@string/all_type"
            app:layout_constraintEnd_toStartOf="@+id/price"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/price"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@string/all_price"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/type"
            app:layout_constraintTop_toBottomOf="@+id/date" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/wti"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_16dp"
            android:text="@string/all_wti"
            app:layout_constraintEnd_toStartOf="@+id/price"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/wtiPrice"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_16dp"
            android:text="@{oil.WTI}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/type"
            app:layout_constraintTop_toBottomOf="@+id/price"
            tools:text="123423" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/brent"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@string/all_brent"
            app:layout_constraintEnd_toStartOf="@+id/price"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wti" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/brentPrice"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@{oil.brent}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/type"
            app:layout_constraintTop_toBottomOf="@+id/wtiPrice"
            tools:text="123423" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dubai"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@string/all_dubai"
            app:layout_constraintEnd_toStartOf="@+id/price"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dubaiPrice"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@{oil.dubai}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/type"
            app:layout_constraintTop_toBottomOf="@+id/brentPrice"
            tools:text="123423" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
