<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="indices"
            type="com.projectseoul.stockmarkettest.models.BDIIndex" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="@dimen/all_300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_corner"
        android:padding="@dimen/all_16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{indices.date}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2020.09.24" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/type"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@string/all_type"
            app:layout_constraintEnd_toStartOf="@+id/index"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/index"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@string/all_index"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/type"
            app:layout_constraintTop_toBottomOf="@+id/date" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bdi"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_16dp"
            android:text="@string/all_bdi"
            app:layout_constraintEnd_toStartOf="@+id/bdiIndex"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bdiIndex"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_16dp"
            android:text="@{indices.bdi}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/type"
            app:layout_constraintTop_toBottomOf="@+id/index"
            tools:text="123423" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bci"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@string/all_bci"
            app:layout_constraintEnd_toStartOf="@+id/index"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bdi" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bciIndex"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@{indices.bci}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/type"
            app:layout_constraintTop_toBottomOf="@+id/bdiIndex"
            tools:text="123423" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bpi"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@string/all_bpi"
            app:layout_constraintEnd_toStartOf="@+id/index"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bci" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bpiIndex"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@{indices.bpi}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/type"
            app:layout_constraintTop_toBottomOf="@+id/bciIndex"
            tools:text="123423" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bsi"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@string/all_bsi"
            app:layout_constraintEnd_toStartOf="@+id/index"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bpi" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bsiIndex"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@{indices.bsi}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/type"
            app:layout_constraintTop_toBottomOf="@+id/bpiIndex"
            tools:text="123423" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bhsi"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@string/all_bhsi"
            app:layout_constraintEnd_toStartOf="@+id/index"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bsi" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/bhsiIndex"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/all_8dp"
            android:text="@{indices.bhsi}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/type"
            app:layout_constraintTop_toBottomOf="@+id/bsiIndex"
            tools:text="123423" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
